--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,11 @@ h1, h2, h3, h4, h5, h6 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+
+.book-card {
+    margin: 1rem;
+    padding: 1rem;
+    border: 6px solid rgb(92, 128, 127);
+    border-radius: 1rem;
+    background-color: rgb(250, 242, 231);
+}
