--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
+    background-color: rgb(207, 219, 188);
 }
 
 img, picture, video, canvas, svg {
@@ -36,6 +37,10 @@ h1, h2, h3, h4, h5, h6 {
 .page-grid {
     display: grid;
     grid-template-columns: 1fr 4fr;
+}
+
+.sidebar {
+    border-right: 4px solid rgb(62, 95, 94);
 }
 
 .library-grid {
