--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ h1, h2, h3, h4, h5, h6 {
     background-color: rgb(250, 242, 231);
     font-size: 1.4rem;
     margin: 4rem 0;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
 }
 
 .library-grid {
