--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+.pacifico-regular {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+
 /* CSS Reset by Josh W Comeau https://www.joshwcomeau.com/css/custom-css-reset/ */
 *, *::before, *::after {
     box-sizing: border-box;
@@ -64,6 +72,12 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
 }
 
+h1 {
+    font-size: 2.5rem;
+    margin: 2rem 0;
+    font-family: pacifico-regular;
+}
+
 .library-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -76,3 +90,4 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 1rem;
     background-color: rgb(250, 242, 231);
 }
+
