--- a/styles.css
+++ b/styles.css
@@ -73,9 +73,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     margin: 2rem 0;
     font-family: pacifico-regular;
+    color: rgb(183, 198, 171);
+    text-shadow: -2px 0 rgb(62, 110, 107), 0 2px rgb(62, 110, 107), 2px 0 rgb(62, 110, 107), 0 -2px rgb(62, 110, 107);
 }
 
 .library-grid {
