Apply suitable grid template for book cards

--- a/styles.css
+++ b/styles.css
@@ -81,8 +81,10 @@ h1 {
 }
 
 .library-grid {
+    width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 20rem));
+    justify-content: center;
 }
 
 .book-card {
