--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,14 @@ h1 {
     background-color: rgb(250, 242, 231);
 }
 
+.card-button {
+    padding: 0.2rem 1rem;
+    border: 3px solid rgb(92, 128, 127);
+    border-radius: 1rem;
+    background-color: rgb(109, 148, 146);
+    font-size: 1rem;
+    font-weight: 500;
+    margin: 0.5rem 0;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
+    color: white;
+}
