--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,8 @@ h1 {
     border: 6px solid rgb(92, 128, 127);
     border-radius: 1rem;
     background-color: rgb(250, 242, 231);
+    display: flex;
+    flex-direction: column;
 }
 
 .card-button {
@@ -117,7 +119,6 @@ h1 {
     background-color: rgb(109, 148, 146);
     font-size: 1rem;
     font-weight: 500;
-    margin: 0.5rem 0;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
     color: white;
 }
