--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,9 @@ h1 {
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
     color: white;
 }
+
+.button-group {
+    display: flex;
+    justify-content: space-around;
+    margin-top: auto;
+}
