--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ h1 {
 .library-grid {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 20rem));
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 20%));
     justify-content: center;
 }
 
@@ -110,6 +110,8 @@ h1 {
     background-color: rgb(250, 242, 231);
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+    height: 18rem;
 }
 
 .card-button {
@@ -127,4 +129,11 @@ h1 {
     display: flex;
     justify-content: space-around;
     margin-top: auto;
+    flex-wrap: wrap;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: rgb(92, 128, 127);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
 }
