--- a/styles.css
+++ b/styles.css
@@ -137,3 +137,20 @@ button:hover {
     background-color: rgb(92, 128, 127);
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
 }
+
+dialog {
+    border: 6px solid rgb(92, 128, 127);
+    border-radius: 1rem;
+    background-color: rgb(250, 242, 231);
+    padding: 2rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80vw;
+    max-width: 80rem;
+}
+
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.4);
+}
