--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,19 @@ button:hover {
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
 }
 
+input[type="submit"] {
+    background-color: rgb(109, 148, 146);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: rgb(92, 128, 127);
+}
+
 dialog {
     border: 6px solid rgb(92, 128, 127);
     border-radius: 1rem;
@@ -149,6 +162,20 @@ dialog {
     transform: translate(-50%, -50%);
     width: 80vw;
     max-width: 80rem;
+}
+
+dialog form input {
+    border: 3px solid rgb(92, 128, 127);
+    border-radius: 10px;
+    background-color: rgb(250, 242, 231);
+    font-size: 1rem;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
+}
+
+dialog form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 dialog::backdrop {
