--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,12 @@ h1 {
 button:hover {
     cursor: pointer;
     background-color: rgb(92, 128, 127);
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+}
+
+form button:hover {
+    cursor: pointer;
+    background-color: rgba(128, 92, 92, 0.325);
 }
 
 input[type="submit"] {
